Added Menu page and updated styles

--- a/index.html
+++ b/index.html
@@ -160,3 +160,45 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ECC Eatery</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to ECC Eatery</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <h2>Delicious Catering & Meals</h2>
+        <p>Experience the best in exquisite cuisine, now serving at ECC Eatery!</p>
+    </section>
+
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are dedicated to providing top-quality meals and excellent customer service. Our mission is to make every event memorable with our delicious catering options!</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>For inquiries and bookings, please reach out to us via email or phone.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 ECC Eatery. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
